SERVER-54456 Fix resharding class mutex handling at time of PrimaryOnlyService instance completion